# django-DevOps

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  pylint.yml  shellcheck.yml
django_devops/: __init__.py
django_devops/guides/: README.md  __init__.py  auth.py
django_devops/management/: __init__.py
django_devops/management/commands/: __init__.py  devops.py  prep_celery.py  prep_gunicorn.py  prep_nginx.py  update_services.py
django_devops/scripts/: continuous_deployment.sh
django_devops/utils/: __init__.py  logger.py  user_input.py
