[metadata]
name = django-DevOps
version = 0.2.1
description = A Django app to manage DevOps.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django, devops, management
url = https://github.com/justinmerrell/django-DevOps
project_urls =
    Bug Tracker = https://github.com/justinmerrell/django-DevOps/issues
author = Justin Merrell
author_email = merrelljustin@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
